2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Fixes in genmenu.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/DmpDb:
	* tools/genmenu.py:
	Support ActionGroup's in genmenu.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/dmp:
	DMP admin documentation updated.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Read form actions rights from the database.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Fix column limiting of user rights by system rights.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* doc/tutorials/DmpDb:
	* tools/genmenu.py:
	Use form names, not form actions, in form action fullnames and shortnames.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Import form action access rights in genmenu.

2009-09-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Limit form actions access rights to the call right.

2009-09-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* doc/tutorials/DmpDb:
	* tools/genmenu.py:
	Initial support for form actions in DMP.

2009-09-12  Milan Zamazal  <pdm@brailcom.org>

	* tools/pytis-transform.el:
	Tool for adding the recently introduced common `id' argument in the sources.

2009-09-12  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	* lib/pytis/presentation/spec.py:
	Make mandatory argument `id' in in Action, Binding and Filter constructors.
	
	This is a backwards incompatible change and all applications and Wiking must be
	updated.
	

2009-06-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	* lib/pytis/data/types_.py:
	LTree type added.

2009-12-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/inputfield.py:
	Fix background colors for some kinds of non-editable fields.

2009-12-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py: