@@ -1,5 +1,10 @@
 2009-09-15  Milan Zamazal  <pdm@brailcom.org>
 
+	* lib/pytis/presentation/spec.py:
+	Fix _spec_name naming conflict in spec.py.
+
+2009-09-15  Milan Zamazal  <pdm@brailcom.org>
+
 	* tools/genmenu.py:
 	Fixes in genmenu.
 
